<resources>
    <string name="app_name">Swift Notify</string>
    <string name="brief_purpose_intro">Lorem ipsum is a type of placeholder text that is used to fill a space without saying anything meaningful</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name:</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="welcome_back_please_enter_your_details">Welcome back! Please enter your details</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome_please_enter_your_details">Welcome! Please enter your details</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="personal_details">Personal Details</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="logs">Logs:</string>
    <string name="search_name">Search name</string>
    <string name="click_me">Click me</string>
    <string name="vibration">Vibration</string>
    <string name="notification">Notification</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="availability">Availability:</string>
    <string name="curriculum_coordinator">Curriculum Coordinator</string>
    <string name="notify_school_s_educators">Notify School\'s Educators</string>
    <string name="gender">Gender:</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="select_status">Select Status</string>
    <string name="are_you_available_to_receive_notifications">Are you available to receive notifications?</string>
    <string name="affirmative">Affirmative</string>
    <string name="negative">Negative</string>
    <string name="availability_with_a_question">Availability?</string>
    <string name="change_username">Change username</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="current_email">Current Email:</string>
    <string name="new_email">New Email:</string>
    <string name="current_password">Current Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_current_email">Enter current email</string>
    <string name="enter">Enter</string>
    <string name="beep_me">Beep Me</string>
    <string name="verify_email">Verify Email</string>
    <string name="next_step">Next Step</string>
    <string name="get_verified">Get Verified</string>
    <string name="section">Section:</string>
    <string name="account">Account:</string>
    <string name="offline_mode">Offline mode</string>
    <string name="state_your_concern_by_pressing_the_button_appropriate_to_your_concern">State your concern by pressing the button appropriate to your concern:</string>
    <string name="important">Important</string>
    <string name="normal">Normal</string>
    <string name="chitchat">ChitChat</string>
    <string name="urgent">Urgent</string>
    <string name="submission">Submission</string>
    <string name="consultation">Consultation</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="status_options">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>

</resources>