<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/gold">

    <LinearLayout
        android:id="@+id/top_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/go_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_black_left_arrow"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="27sp"
            android:fontFamily="@font/acme"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_navigation_bar"
        android:background="@drawable/curve_top_white_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:fontFamily="@font/acme"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/welcome_please_enter_your_details"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/acme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_full_name"
                android:padding="10dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/curve_gray_background"
                android:autofillHints="true"
                android:inputType="text" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_age"
                android:padding="10dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/curve_gray_background"
                android:autofillHints="true"
                android:inputType="text" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:spinnerMode="dialog" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_email"
                android:padding="10dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/curve_gray_background"
                android:autofillHints="true"
                android:inputType="text" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_password"
                android:padding="10dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/curve_gray_background"
                android:autofillHints="true"
                android:inputType="textPassword" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_type_password"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_password"
                android:padding="10dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/curve_gray_background"
                android:autofillHints="true"
                android:inputType="textPassword" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:padding="15dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/curve_black_background"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/acme"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textSize="22sp"
                    android:textColor="@color/gold"
                    android:fontFamily="@font/acme"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>