<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/gold">

    <LinearLayout
        android:id="@+id/top_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/go_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_black_left_arrow"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="27sp"
            android:fontFamily="@font/acme"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_navigation_bar"
        android:background="@drawable/curve_top_white_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/log_in_to_your_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:fontFamily="@font/acme"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/welcome_back_please_enter_your_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/acme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:id="@+id/logInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="true"
                android:background="@drawable/curve_gray_background"
                android:fontFamily="@font/acme"
                android:hint="@string/enter_your_email"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="25sp" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/acme"/>

            <EditText
                android:id="@+id/logInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="true"
                android:background="@drawable/curve_gray_background"
                android:fontFamily="@font/acme"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="25sp" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_black_background"
                android:fontFamily="@font/acme"
                android:padding="15dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center"
                android:progressTint="@color/gold"
                android:visibility="gone"
                style="?android:attr/progressBarStyleHorizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_account"
                    android:textSize="23sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/acme"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textSize="23sp"
                    android:textColor="@color/gold"
                    android:fontFamily="@font/acme"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>